--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -3,7 +3,7 @@
 	position: relative;
 
 	@include media('>=tablet') {
-		background-image: url('../img/rooftop--desktopbg.jpg');
+		background-image: url('../img/bg__hero--desktop.jpg');
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position-x: right;
@@ -15,13 +15,18 @@
 		max-height: 700px;
 	}
 	@include media('>=1500px') {
+		background-image: url('../img/bg__hero--widescreen.jpg');
 		max-height: 900px;
+	}
+	@include media('>=1700px') {
+		max-height: 1100px;
 	}
 }
 
 .hero__text {
-    padding: 30px;
+    padding: 30px 25px;
     background: $colour-white;
+    border-radius: 5px;
 
     @include media('>=500px') {
         padding: 50px 40px;
@@ -45,13 +50,21 @@
 		width: 42%;
 		margin: 0 70px;
 	}
+	@include media('>=1700px') {
+		width: 38%;
+		margin: 0 100px;
+		padding: 60px;
+	}
+	@include media('>=1800px') {
+		width: 30%;
+	}
 }
 
 .hero__image {
 	height: 0;
 	padding-bottom: 100%;
 
-	background-image: url('../img/rooftoop-mobilebg.jpg');
+	background-image: url('../img/bg__hero--tablet.jpg');
 	background-repeat: no-repeat;
 	background-size: 100% auto;
 
@@ -76,6 +89,11 @@
 	@include media('>=tablet') {
 		margin-bottom: 25px;
 	}
+
+	@include media('>=1700px') {
+		@include font-size(60);
+    	@include line-height(60);
+	}
 }
 
 .hero__sub {
@@ -91,10 +109,13 @@
     	margin-bottom: 10px;
 	}
 
-
-
 	@include media('>=tablet') {
 		margin-bottom: 25px;
+	}
+
+	@include media('>=1700px') {
+		@include font-size(40);
+    	@include line-height(40);
 	}
 }
 
@@ -104,6 +125,11 @@
 
     @include media('>=500px') {
 		@include font-size(22);
+    	@include line-height(35);
+    }
+
+    @include media('>=1500px') {
+    	@include font-size(27);
     	@include line-height(35);
     }
 }
